--- a/css/base.css
+++ b/css/base.css
@@ -174,22 +174,14 @@ section:nth-child(6) {
 
 
 
-
-
-
-
-
-
-
-
-
 h1 {
   font-size: 2.6rem;
   background: var(--linear-bg-1);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   text-shadow: 0px 0px #00000000;
-  line-height: 4rem;
+  font-family: 'Pacifico', cursive;
+  line-height: 3rem;
 }
 
 
