--- a/css/base.css
+++ b/css/base.css
@@ -8,12 +8,12 @@ html {
   --linear-bg-1: linear-gradient(90deg, #06a7e7 0%, #3f4de3 80%);
 
 
-  --bg-body-light: rgb(244, 244, 244);
+  --bg-body-light: rgb(238, 238, 238);
   --bg-body-dark: rgb(237, 237, 240);
 
   --bg-button: #f9f9f9;
   --bg-banner:  rgba(250, 250, 250, 0.792);
-  --bg-button-2: #f4f4f4;
+  --bg-button-2: #eeeeee;
   --bg-footer: rgb(7, 14, 61);
 
   scroll-behavior: smooth;
@@ -42,7 +42,7 @@ html {
   
   --bg-button: #141414;
   --bg-banner: #514f4fdd;
-  --bg-button-2: #f4f4f45b;
+  --bg-button-2: #2e2e2edd;
   --bg-footer: rgb(27, 21, 14);
 
    background-color: var(--bg-body-dark);
@@ -77,25 +77,6 @@ html {
   100% { transform: rotate(360deg); }
 }
 
-/* Add animation to "page content" */
-.animate-bottom {
-  position: relative;
-  -webkit-animation-name: animatebottom;
-  -webkit-animation-duration: 0.1s;
-  animation-name: animatebottom;
-  animation-duration: 0.1s
-}
-
-@-webkit-keyframes animatebottom {
-  from { bottom:-100px; opacity:0 } 
-  to { bottom:0px; opacity:1 }
-}
-
-@keyframes animatebottom { 
-  from{ bottom:-100px; opacity:0 } 
-  to{ bottom:0; opacity:1 }
-}
-
 .bodyContent{
   display: none;
 }
@@ -110,8 +91,10 @@ html {
   max-width: 330px;
   padding: 10px;
   height: 100%;
+  min-height: 560px;
   z-index: 200;
   vertical-align: middle;
+  overflow: scroll;
 
 }
 
