--- a/css/projects.css
+++ b/css/projects.css
@@ -97,6 +97,7 @@
   text-align: center;
   color: var(--color-main);
   font-size: 1.3rem;
+  border: 2px solid var(--bg-body-light);
 
 }
 
@@ -180,7 +181,6 @@
   vertical-align: middle;
   margin-left: 8px;
   margin-right: 8px;
-  border: 1px solid rgba(140, 140, 140, 0.801);
   background-color: var(--bg-button-2);
   padding: 10px;
   border-radius: 5px;
