--- a/css/base.css
+++ b/css/base.css
@@ -8,11 +8,11 @@ html {
   --linear-bg-1: linear-gradient(90deg, #06a7e7 0%, #3f4de3 80%);
 
 
-  --bg-body-light: rgb(238, 238, 238);
-  --bg-body-dark: rgb(237, 237, 240);
+  --bg-body-light: rgb(247, 247, 247);
+  --bg-body-dark: rgb(241, 241, 241);
 
   --bg-button: #f9f9f9;
-  --bg-banner:  rgba(250, 250, 250, 0.792);
+  --bg-banner:  rgba(250, 250, 250, 0.866);
   --bg-button-2: #eeeeee;
   --bg-footer: rgb(7, 14, 61);
 
@@ -94,7 +94,6 @@ html {
   min-height: 560px;
   z-index: 200;
   vertical-align: middle;
-  overflow: scroll;
 
 }
 
@@ -495,10 +494,12 @@ footer .icon-section i:hover {
     width: 100%;
    max-width: 100%;
     height: 40px;
+    min-height: 40px;
     text-align: center;
     vertical-align: middle;
    justify-content: space-around;
    padding: 7px;
+ 
 
   
   }
@@ -563,5 +564,24 @@ footer .icon-section i:hover {
     margin-right: 12px;
     margin-left: 12px;
   }
+
+}
+
+
+@media screen and (max-width: 822px) and (max-height: 562px){
+
+.headerPrincipal .container{
+display: block;
+
+}
+
+.menu a:not(.active){
+  display: none;
+}
+
+.settingsContainer{
+  margin-top: 40px;
+}
+
 
 }
