--- a/css/base.css
+++ b/css/base.css
@@ -13,7 +13,7 @@ html {
 
   --bg-button: #f9f9f9;
   --bg-banner:  rgba(250, 250, 250, 0.866);
-  --bg-button-2: #eeeeee;
+  --bg-button-2: #bdcefa4e;
   --bg-footer: rgb(7, 14, 61);
 
   scroll-behavior: smooth;
@@ -42,7 +42,7 @@ html {
   
   --bg-button: #141414;
   --bg-banner: #514f4fdd;
-  --bg-button-2: #2e2e2edd;
+  --bg-button-2: #403d37;
   --bg-footer: rgb(27, 21, 14);
 
    background-color: var(--bg-body-dark);
