--- a/css/home.css
+++ b/css/home.css
@@ -83,6 +83,7 @@
     background-color: var(--bg-button);
     border-radius: 7px;
     line-height: 1.8rem;
+    border: 1px solid #abababa5;
 
 }
 
