--- a/css/education.css
+++ b/css/education.css
@@ -1,40 +1,40 @@
-.educationContainer{
+.educationContainer {
   display: flex;
   flex-direction: column;
- justify-content: space-around;
- min-height: 70vh;
- padding: 10%;
- color: var(--color-body);
- }
-   
- 
- .educationContainer h2{
+  justify-content: space-around;
+  min-height: 70vh;
+  padding: 10%;
+  color: var(--color-body);
+}
+
+
+.educationContainer h2 {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   padding: 25px 0px 25px 0px;
-  
- }
- 
- .educationItem{
-   display: flex;
-   flex-direction: column;
-   justify-content: flex-start;
-   padding: 16px;
-   max-width: 100%;
-   background-color:var(--bg-banner);
-   border: 1px solid var(--color-border);
-   margin-bottom: 18px;
-   border-radius: 10px;
 
- }
- 
-.educationImg{
+}
+
+.educationItem {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 16px;
+  max-width: 100%;
+  background-color: var(--bg-banner);
+  border: 1px solid var(--color-border);
+  margin-bottom: 18px;
+  border-radius: 10px;
+
+}
+
+.educationImg {
   display: none;
 }
 
- 
-.educationContainer h3{
+
+.educationContainer h3 {
   line-height: 1.3rem;
   font-weight: 600;
   margin-bottom: 3px;
@@ -42,74 +42,89 @@
 }
 
 
-.educationItem:hover{
- border-color: var( --color-main);
+.educationItem:hover {
+  border-color: var(--color-main);
+  box-shadow: 0 1px 1px var(--color-main),0 3px 6px rgba(183, 183, 183, 0.05);
 
 }
 
-.educationContainer p{
- margin: 4px;
+.educationContainer p {
+  margin: 4px;
 }
 
 
 
-@media screen and (min-width: 672px){
- 
-  .educationContainer{
+@media screen and (min-width: 982px) {
+
+  .educationContainer {
     padding-top: 5%;
     padding-bottom: 3%;
-    height:calc(100vh-40px);
+    height: calc(100vh-40px);
+    width: 70%;
+    text-align: center;
   }
 
 
-  .educationItem{
+  .educationItem {
+    display: inline-block;
     flex-direction: row;
-    max-width: 750px;
-  }
+    width: 280px;
+    margin: 10px;
+    height: 140px;
+    vertical-align: middle;
 
-.education__imgContainer{
-  height: 60px;
-  width: 100px;
-  margin-right: 20px;
-  overflow: hidden;
-  border-radius: 10px;
-  display: flex;
-
-}
-
-  .educationImg{
-    display: flex;
-    height: min-content;
-    max-width:100%;
-    max-height:100%;
-  }
-  }
-
-
-
-
-
-  @media screen and (min-width: 1220px){
   
-.educationContainer .draw-container{
-  display: inline;
-  position: absolute;
-  right: 10%;
-  bottom: 20%;
- }
 
-.educationDraw{
-  height: 300px;
-  margin-bottom: 7px;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-image: url(../img/man_with_documents.png);
+  }
+
+  .education__imgContainer {
+    overflow: hidden;
+    width: 30%;
+    border-radius: 10px;
+    display: inline-block;
+
+  }
+
+  .educationImg {
+    display: inline-block;
+    height: min-content;
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  .educationItem__info {
+    text-align: center;
+
+  }
+
 }
 
-.dark .educationDraw{
 
-  background-image: url(../img/man_with_documents_dark.png);
-}
+
+
+
+@media screen and (min-width: 1220px) {
+
+  .educationContainer .draw-container {
+    display: inline;
+    position: absolute;
+    right: 15%;
+    bottom: 12%;
+  }
+
+  .educationDraw {
+    height: 300px;
+    margin-bottom: 7px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url(../img/man_with_documents.png);
+    transform: scale(0.8);
+  }
+
+  .dark .educationDraw {
+
+    background-image: url(../img/man_with_documents_dark.png);
+  }
 
 
 }
