--- a/css/base.css
+++ b/css/base.css
@@ -1,10 +1,10 @@
 html {
   --color-body: #686868;
   --color-main: #0970e5;
-  --color-icons:rgb(175, 177, 181);
-  --color-border:rgba(193, 193, 193, 0.705);
-  --color-error:rgb(229, 112, 40);
- 
+  --color-icons: rgb(175, 177, 181);
+  --color-border: rgba(193, 193, 193, 0.705);
+  --color-error: rgb(229, 112, 40);
+
   --linear-bg-1: linear-gradient(90deg, #06a7e7 0%, #3f4de3 80%);
 
 
@@ -12,7 +12,7 @@ html {
   --bg-body-dark: rgb(241, 241, 241);
 
   --bg-button: #f9f9f9;
-  --bg-banner:  rgba(250, 250, 250, 0.866);
+  --bg-banner: rgba(250, 250, 250, 0.866);
   --bg-button-2: #c7d7ff4e;
   --bg-footer: rgb(7, 14, 61);
 
@@ -30,22 +30,22 @@ html {
 .dark {
   --color-body: #ffffff;
   --color-main: #ffc800;
-   --color-border:rgba(39, 39, 39, 0.119);
-   --color-error:rgb(255, 132, 94);
+  --color-border: rgba(39, 39, 39, 0.119);
+  --color-error: rgb(255, 132, 94);
 
-   
-  --linear-bg-1:  #ffc800;
 
- 
+  --linear-bg-1: #ffc800;
+
+
   --bg-body-light: rgb(68, 68, 68);
   --bg-body-dark: rgb(57, 57, 57);
-  
+
   --bg-button: #141414;
   --bg-banner: #514f4fdd;
   --bg-button-2: #252525;
   --bg-footer: rgb(27, 21, 14);
 
-   background-color: var(--bg-body-dark);
+  background-color: var(--bg-body-dark);
 
 }
 
@@ -68,16 +68,59 @@ html {
 }
 
 @-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
-.bodyContent{
+
+
+/* Works on Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--color-main) var(bg-body-dark);
+}
+
+/* Works on Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  -webkit-appearance: none;
+}
+
+*::-webkit-scrollbar {
+  width: 6px;
+}
+
+*::-webkit-scrollbar-track {
+  background: var(bg-body-dark);
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--color-main);
+  border-radius: 20px;
+  border: 1px solid var(bg-body-dark);
+}
+
+
+
+
+
+
+
+.bodyContent {
   display: none;
 }
 
@@ -95,6 +138,7 @@ html {
   z-index: 200;
   vertical-align: middle;
 
+
 }
 
 
@@ -107,6 +151,8 @@ html {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+
+
 }
 
 
@@ -122,7 +168,7 @@ html {
 }
 
 
-.headerPrincipal .menu{
+.headerPrincipal .menu {
   display: flex;
   flex-direction: column;
 }
@@ -170,7 +216,7 @@ html {
 
 
 
-.hide{
+.hide {
   display: none;
 
 
@@ -180,7 +226,7 @@ html {
 
 section:nth-child(2) {
   background-color: var(--bg-body-light);
-  
+
 }
 
 
@@ -195,7 +241,7 @@ section:nth-child(4) {
 
 section:nth-child(5) {
   background-color: var(--bg-body-dark);
-   
+
 }
 
 section:nth-child(6) {
@@ -224,14 +270,14 @@ h2 {
   -webkit-text-fill-color: transparent;
   text-shadow: 0px 0px #00000000;
   line-height: 3rem;
-  
+
 }
 
 
 
 
 strong {
-color: var(--color-main);
+  color: var(--color-main);
   font-weight: 500;
 
 }
@@ -239,7 +285,7 @@ color: var(--color-main);
 
 
 
-a{
+a {
   text-decoration: none;
 }
 
@@ -255,7 +301,7 @@ a{
 
 
 
-.draw{
+.draw {
   display: none;
 }
 
@@ -344,17 +390,17 @@ a{
 
 
 
-.draw-container{
-  display:none;
+.draw-container {
+  display: none;
 }
 
-.draw-legend{
+.draw-legend {
   opacity: 0;
   margin-top: 3px;
 }
 
 
-.draw-legend a{
+.draw-legend a {
   background: var(--linear-bg-1);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -362,11 +408,12 @@ a{
   font-weight: 900;
 }
 
-.draw-container:hover .draw-legend{
+.draw-container:hover .draw-legend {
   opacity: 1 !important;
 }
 
-.draw-legend, .draw-legend a{
+.draw-legend,
+.draw-legend a {
   font-size: 13px !important;
 }
 
@@ -389,11 +436,11 @@ a{
 
 
 .fadeOut {
-  opacity: 0;
+  transform: scale(0);
 }
 
 .hide {
-  display: none;
+  transform: scale(0);
 }
 
 
@@ -406,22 +453,29 @@ footer {
   justify-content: space-around;
   background: var(--bg-footer);
   color: #ffffff;
-  padding: 10%;
+  padding-top: 6%;
+  padding-bottom: 3%;
 
 }
 
-footer div, footer p{
+footer div,
+footer p {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center
 }
 
 
 
 footer i {
-font-size: 27px;
-color: #ffffff;
+  font-size: 27px;
+  color: #ffffff;
+  margin-right: 12px;
+  margin-left: 12px;
 }
+
+
+
 
 footer .icon-section i:hover {
   transform: scale(1.1);
@@ -482,8 +536,8 @@ footer .icon-section i:hover {
 }
 
 
-@media screen and (min-width: 822px){
-  .header-border{
+@media screen and (min-width: 822px) {
+  .header-border {
     box-shadow: 0px 3px 6px -6px var(--color-2-body);
     -webkit-box-shadow: 0px 3px 6px -6px var(--color-2-body);
     -moz-box-shadow: 0px 3px 6px -6px var(--color-2-body);
@@ -492,57 +546,60 @@ footer .icon-section i:hover {
   .headerPrincipal {
     display: flex;
     width: 100%;
-   max-width: 100%;
-    height: 40px;
+    max-width: 100%;
+    height: 1vh;
     min-height: 40px;
     text-align: center;
     vertical-align: middle;
-   justify-content: space-around;
-   padding: 7px;
- 
+    justify-content: space-around;
+    padding: 7px;
 
-  
+
+
   }
 
   .headerPrincipal .active,
-.headerPrincipal a:hover {
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-weight: 600;
-  text-shadow: 0px 0px 0px rgba(69, 69, 69, 0);
-}
+  .headerPrincipal a:hover {
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: 600;
+    text-shadow: 0px 0px 0px rgba(69, 69, 69, 0);
+  }
 
 
-  .menu li, .menu a, .menu p{
+  .menu li,
+  .menu a,
+  .menu p {
     display: flex;
     flex-direction: column;
     text-align: center;
     vertical-align: middle;
-   justify-content: space-around;
+    justify-content: space-around;
 
   }
 
-  .menu{
-   width:730px;
-   text-align: center;
-   vertical-align: middle;
-  justify-content: space-around;
+  .menu {
+    width: 730px;
+    text-align: center;
+    vertical-align: middle;
+    justify-content: space-around;
   }
 
-  
+
   .menu a {
     border-bottom: 0;
     margin-top: 0;
-   
-  }
-  
-  .headerPrincipal .container, .headerPrincipal .menu {
-    flex-direction: row;
- 
-  }
-  
 
-  .headerTitle{
+  }
+
+  .headerPrincipal .container,
+  .headerPrincipal .menu {
+    flex-direction: row;
+
+  }
+
+
+  .headerTitle {
     display: flex;
     font-size: 1rem;
     height: 2.15rem;
@@ -551,37 +608,28 @@ footer .icon-section i:hover {
     justify-content: center;
 
   }
-  
-  footer{
-    padding: 3%;
+
+
+
+
+
+}
+
+
+@media screen and (max-width: 822px) and (max-height: 562px) {
+
+  .headerPrincipal .container {
+    display: block;
+
   }
 
-  footer .icon-section{
-    justify-content: center;
+  .menu a:not(.active) {
+    display: none;
   }
 
-  footer .icon-section i{
-    margin-right: 12px;
-    margin-left: 12px;
+  .settingsContainer {
+    margin-top: 40px;
   }
-
-}
-
-
-@media screen and (max-width: 822px) and (max-height: 562px){
-
-.headerPrincipal .container{
-display: block;
-
-}
-
-.menu a:not(.active){
-  display: none;
-}
-
-.settingsContainer{
-  margin-top: 40px;
-}
 
 
 }
