--- a/css/buttons.css
+++ b/css/buttons.css
@@ -27,36 +27,38 @@
 
 
 .menuButton {
-    background: var(--linear-bg-1);
+    background: var(--color-main);
     width: auto;
     position: fixed;
     left: 4%;
     bottom: 3%;
-    border-radius: 8px;
-    font-size: 1.5rem;
+    border-radius: 20px;
+    font-size: 19px;
     text-shadow: 1px 1px 2px rgb(69, 69, 69);
-    box-shadow: 1px 1px 2px 1px rgb(69, 69, 69);
-    padding: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.389),0 3px 6px rgba(0, 0, 0, .05);
+    padding:  8px 14px 8px 14px;
     color: #ffffff;
     z-index: 199;
+    transition:1s
    
 }
 
 
 .arrowTopButton {
     display: none;
-    background: var(--linear-bg-1);
+    background: var(--color-main);
     width: auto;
     position: fixed;
     right: 4%;
     bottom: 3%;
-    border-radius: 8px;
-    font-size: 1.5rem;
-    padding: 10px;
+    border-radius: 20px;
+    font-size: 19px;
+    padding:  8px 14px 8px 14px;
     color: #ffffff;
-    box-shadow: 1px 1px 2px 1px rgb(69, 69, 69);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.389),0 3px 6px rgba(0, 0, 0, .05);
     text-shadow: 1px 1px 2px rgb(69, 69, 69);
     z-index: 199;
+    transition:1s
 }
 
 
@@ -73,7 +75,7 @@
     width: 100%;
     height: 100%;
     z-index: 199;
-
+    transition:1s
 }
 
 
@@ -210,15 +212,16 @@
         display: none;
         position: fixed;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: center;
         align-items: center;
         text-align: center;
         background-color: var(--bg-body-dark);
         margin: 0;
         height: 60px;
-        left: 0;
-        width: 100%;
+        right: 0;
+        width: 500px;
         top: 52px;
+        border-bottom-left-radius: 30px;
         box-shadow: 0px 3px 6px -6px var(--color-body);
         -webkit-box-shadow: 0px 3px 6px -6px var(--color-body);
         -moz-box-shadow: 0px 3px 6px -6px var(--color-body);
@@ -255,8 +258,8 @@
        display: flex;
         flex-direction: row;
         justify-content: space-around;
-        width: 600px;
         margin-top: 5px;
+        margin-right: 25px;
 
     }
 
