--- a/css/home.css
+++ b/css/home.css
@@ -1,7 +1,7 @@
 .home_container {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     height: 100vh;
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -42,7 +42,7 @@
     justify-content: space-around;
     text-align: center;
     height: 17vh;
-    line-height: 1.9rem;
+    line-height: 2.3rem;
     max-height: 128px;
     min-height: 118px;
     border-radius: 15px;
@@ -64,7 +64,7 @@
     flex-direction: column;
     justify-content: space-around;
     height: 24vh;
-    max-height: 180px;
+    max-height: 177px;
     min-height: 140px;
     text-align: center;
 
@@ -76,17 +76,24 @@
 .home__social-section i {
     display: inline;
     font-size: 1rem;
+    color: var(--color-body);
 }
+
+
+
+
+
+
 
 
 .socialItem {
-    background-color: var(--bg-button);
-    border-radius: 7px;
-    line-height: 1.8rem;
-    border: 1px solid #abababa5;
-
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.389),0 3px 6px rgba(0, 0, 0, .05);
+  box-sizing: border-box;
+  line-height: 1.8rem;
+  border-radius: 6px;
+    background: var(--bg-button)
+  
 }
-
 
 .socialItem i {
     display: none;
@@ -97,18 +104,17 @@
     background: var(--linear-bg-1);
     -webkit-background-clip: unset;
     -webkit-text-fill-color: #ffffff;
-    transition: 0.1s ease-out;
     text-shadow: 1px 1px 2px rgb(69, 69, 69);
     font-weight: 600;
 }
 
 
+
+
 .socialItem:hover p,
 .socialItem:hover i {
     color: #ffffff;
-}
-
-
+} 
 .arrowContainer {
     position: absolute;
     bottom: 10%;
@@ -137,7 +143,7 @@
     flex-direction: column;
     justify-content: space-around;
     height: 100vh;
-    padding: 10%;
+    padding: 0 6% 0 6% ;
 }
 
 
@@ -163,11 +169,13 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-image: url(../img/about.png);
+    
   }
   
   .dark .aboutDraw{
   
     background-image: url(../img/about_dark.png);
+    
   }
   
 
@@ -182,13 +190,13 @@
     .greetingContainer {
         padding-top: 5%;
         padding-bottom: 3%;
-        min-height: 220px;
-        max-height: 230px;
+        min-height: 210px;
+        max-height: 220px;
     }
 
     .greetingLines {
-        max-height: 50px;
-        min-height: 32px;
+        max-height: 60px;
+        min-height: 42px;
     }
 
     .home__social-section {
@@ -216,19 +224,20 @@
 
 
     .aboutContainer {
-        padding-top: 5%;
-        padding-bottom: 3%;
-        height: calc(100vh-40px);
+        
+        height: 99vh;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
+     
 
     }
 
     .aboutDraw{
-     
+        margin-left: 80px;
         height: 270px;
         width: 320px;
+    
         
       }
       
