projects visualization issues fixed

--- a/css/base.css
+++ b/css/base.css
@@ -13,7 +13,7 @@ html {
 
   --bg-button: #f9f9f9;
   --bg-banner: rgba(250, 250, 250, 0.866);
-  --bg-button-2: #c7d7ff4e;
+  --bg-button-2: #dfe2e9;
   --bg-footer: rgb(7, 14, 61);
 
   scroll-behavior: smooth;
