--- a/css/contact.css
+++ b/css/contact.css
@@ -2,7 +2,7 @@
   flex-direction: column;
   justify-content: space-around;
   min-height: 99vh;
-  padding: 6%;
+  padding: 10%;
   color: var(--color-body);
 }
 
@@ -16,12 +16,12 @@
 }
 
 .contactContainer h2 {
-  padding: 25px 0px 25px 0px;
+  padding: 5px 0px 5px 0px;
 }
 
 .contactInfo,
 .formContainer {
-
+  margin: 10px;
   border: 1px solid #979797;
 }
 
@@ -117,7 +117,7 @@ form {
   display: flex;
   font-family: 'Montserrat', sans-serif;
   border: 1px solid rgba(140, 140, 140, 0.801);
-  margin: 19px 0 29px 0;
+  margin: 19px 0 0 0;
   padding: 10px;
   width: 90%;
   max-width: 120px;
@@ -161,24 +161,26 @@ form {
 @media screen and (min-width:900px) {
 
   .contactContainer{
-    padding: 0 ;
-    padding-top: 12vh;
-    height: 87vh;
-
+    justify-content: center;
+    padding: 3%;
+   
   }
 
 
   .contactContainer ul {
-    
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
     
 
   }
 
 
   .contactContainer li{
-    width: 33vw;
+    width: 450px;
+    margin: 50px;
+    justify-content: center;
+    
   }
 
   .contact-info p,
