--- a/css/base.css
+++ b/css/base.css
@@ -137,6 +137,7 @@ html {
   min-height: 560px;
   z-index: 200;
   vertical-align: middle;
+  
 
 
 }
@@ -168,9 +169,11 @@ html {
 }
 
 
-.headerPrincipal .menu {
+.menu {
   display: flex;
   flex-direction: column;
+  padding: 1px;
+
 }
 
 .menu a {
@@ -183,10 +186,9 @@ html {
   -webkit-user-select: none;
   text-decoration: none;
   flex-direction: column;
-  margin-top: 1.2rem;
-  box-shadow: 0px 3px 6px -6px var(--color-2-body);
-  -webkit-box-shadow: 0px 3px 6px -6px var(--color-2-body);
-  -moz-box-shadow: 0px 3px 6px -6px var(--color-2-body);
+
+  border-bottom: 2px solid var(--bg-body-dark);
+
 
 }
 
@@ -537,11 +539,11 @@ footer .icon-section i:hover {
 
 
 @media screen and (min-width: 822px) {
-  
-  h1{
+
+  h1 {
     line-height: 6rem;
   }
-  
+
   .header-border {
     box-shadow: 0px 3px 6px -6px var(--color-2-body);
     -webkit-box-shadow: 0px 3px 6px -6px var(--color-2-body);
@@ -549,6 +551,8 @@ footer .icon-section i:hover {
   }
 
   .headerPrincipal {
+    border: 0;
+
     display: flex;
     width: 100%;
     max-width: 100%;
@@ -618,6 +622,26 @@ footer .icon-section i:hover {
 
 
 
+}
+
+
+@media screen and (max-width:822px) {
+  
+  .headerTitle{
+    padding: 10px;
+  }
+
+  
+  .headerPrincipal .menu {
+    border-radius: 15px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.389), 0 3px 6px rgba(0, 0, 0, .05) ;
+    padding: 10px;
+  }
+
+  .menu a{
+    padding: 4px;
+    margin: 8px;
+  }
 }
 
 
