--- a/css/buttons.css
+++ b/css/buttons.css
@@ -3,8 +3,11 @@
     flex-direction: column;
     height: 17vh;
     justify-content: space-around;
-    margin-right: 10%;
-    margin-left: 10%;
+    background: var(--bg-body-dark);
+    border-radius: 15px;
+    padding: 0 20px 0 20px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.389),0 3px 6px rgba(0, 0, 0, .05);
+    margin-bottom: 10px;
 }
 
 
@@ -221,6 +224,7 @@
         right: 0;
         width: 500px;
         top: 52px;
+        border-radius: 0;
         border-bottom-left-radius: 30px;
         box-shadow: 0px 3px 6px -6px var(--color-body);
         -webkit-box-shadow: 0px 3px 6px -6px var(--color-body);
