--- a/css/education.css
+++ b/css/education.css
@@ -23,9 +23,9 @@
   padding: 16px;
   max-width: 100%;
   background-color: var(--bg-banner);
-  border: 1px solid var(--color-border);
   margin-bottom: 18px;
   border-radius: 10px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.389),0 3px 6px rgba(0, 0, 0, .05);
 
 }
 
