--- a/css/home.css
+++ b/css/home.css
@@ -29,7 +29,7 @@
     flex-direction: column;
     justify-content: space-around;
     text-align: center;
-    height: 60vh;
+    height: 53vh;
     min-height: 320px;
     padding: 12px 6% 12px 6% ;
     background-color: var(--bg-banner);
@@ -45,6 +45,7 @@
     max-height: 158px;
     min-height: 138px;
     border-radius: 15px;
+    padding: 10px;
 
 }
 
@@ -62,7 +63,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    height: 24vh;
+    height: 30vh;
     max-height: 177px;
     min-height: 140px;
     text-align: center;
