--- a/css/projects.css
+++ b/css/projects.css
@@ -18,6 +18,7 @@
   font-size: 16px;
   font-weight: 600;
   line-height: 2rem;
+  opacity: 0.75;
 
 }
 
@@ -28,11 +29,13 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 16px;
+  padding:  20px 20px 30px 20px;
   text-align: center;
   max-width: 600px;
+  height: auto;
   background-color: var(--bg-banner);
   border: 1px solid var(--color-border);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.389),0 3px 6px rgba(0, 0, 0, .05);
   margin-bottom: 18px;
   border-radius: 10px;
 
@@ -60,6 +63,7 @@
   background-position: center center;
   align-items: flex-end;
   flex-direction: column-reverse;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.389),0 3px 6px rgba(0, 0, 0, .05);
 
 }
 
@@ -91,7 +95,7 @@
   justify-content: center;
   text-align: center;
   color: var(--color-main);
-  border: 1px solid rgba(78, 78, 78, 0.428);
+  
     -webkit-user-select: none;
 
 }
@@ -138,7 +142,7 @@
   vertical-align: middle;
   font-size: 0.7rem;
   -webkit-user-select: none;
-  padding-top: 5px;
+  padding-top: 10px;
   
 }
 
@@ -179,7 +183,7 @@
   padding: 8px;
   border-radius: 5px;
   color: var(--color-body);
-  border: 1px solid rgba(78, 78, 78, 0.428);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.389),0 3px 6px rgba(0, 0, 0, .05);
 }
 
 
@@ -207,7 +211,7 @@
   display: inline-block;
   vertical-align: middle;
   width: 198px;
-  height: 280px;
+  height: 260px;
   margin: 7px;
   position: relative;
   }
