--- a/css/skills.css
+++ b/css/skills.css
@@ -6,10 +6,9 @@
 .skillsContainer{
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
  color: var(--color-body);
  min-height: 100vh;
- padding: 10%;
  vertical-align: middle;
  }
 
@@ -18,7 +17,7 @@
  .skillsContainer h2{
  display: flex;
  justify-content: flex-start;
- padding: 25px 0px 25px 0px;
+margin: 15px;
   
 }
 
@@ -28,6 +27,7 @@
   flex-direction: column;
  justify-content: space-around;
  height: 70vh;
+ margin-bottom:15px ;
  max-height: 550px;
 }
     
@@ -44,6 +44,7 @@
    color: var(--color-body);
    border: 1px solid var(--color-border);
     font-size: 1.1rem;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.389),0 3px 6px rgba(0, 0, 0, .05);
 
  }
 
@@ -64,9 +65,6 @@
 
 
  @media screen and (min-width:300px){
-  .skillsContainer{
-    min-height: 50px;
-  }
 
   .skillsContainer h2{
     justify-content: center;
@@ -109,5 +107,7 @@
 @media screen and (min-height: 638px) and (min-width: 800px){
   .skillsContainer{
     padding: 5%;
+    min-height: 1vh;
   }
+
 }
