--- a/css/skills.css
+++ b/css/skills.css
@@ -39,7 +39,7 @@ margin: 15px;
    padding: 5px 20px 5px 20px;
     align-items: center;
    background-color:var(--bg-banner);
-   margin-bottom: 8px;
+    margin:20px;
    border-radius: 10px;
    color: var(--color-body);
    border: 1px solid var(--color-border);
