--- a/css/base.css
+++ b/css/base.css
@@ -130,7 +130,7 @@ html {
   display: none;
   background: var(--bg-body-light);
   position: fixed;
-  width: 100%;
+  width: 80%;
   height: 100%;
   z-index: 200;
   vertical-align: middle;
@@ -145,7 +145,7 @@ nav{width: 100%;  justify-content: center;
   text-align: center;}
 
 .headerPrincipal .container {
-  width: 100%;
+  width: 80%;
   height: 100%;
   padding-top: 5px;
   margin: 0 auto;
@@ -183,12 +183,12 @@ nav{width: 100%;  justify-content: center;
 }
 
 .menu a {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   margin-bottom: 15px;
   display: flex;
   width: 100%;
   color: var(--color-body);
-  border-radius: 5px;
+  border-radius: 9px;
   padding: 10px 0 10px 0;
 
   letter-spacing: 0.5px;
@@ -221,7 +221,8 @@ nav{width: 100%;  justify-content: center;
   -webkit-background-clip: unset;
   -webkit-text-fill-color: #ffffff;
   transition: 0.1s ease-out;
-  text-shadow: 1px 1px 2px rgb(69, 69, 69);
+  font-weight: 600;
+  text-shadow: 2px 2px 2px rgb(69, 69, 69);
 
 }
 
