--- a/css/buttons.css
+++ b/css/buttons.css
@@ -73,7 +73,7 @@
 
 .closeMenuButton {
     display: none;
-    background:#e9e9e9;
+    background: var(--bg-body-dark);
     text-align: center;
     align-items: center;
     width: 80%;
@@ -82,7 +82,6 @@
     padding: 10px;
     color: var(--color-main);
     font-size: 19px;
-    transition:1s;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.389),0 3px 6px rgba(0, 0, 0, .05);
 }
 
