--- a/css/base.css
+++ b/css/base.css
@@ -130,7 +130,7 @@ html {
   display: none;
   background: var(--bg-body-light);
   position: fixed;
-  width: 80%;
+  width: 100%;
   height: 100%;
   z-index: 200;
   vertical-align: middle;
@@ -145,7 +145,7 @@ nav{width: 100%;  justify-content: center;
   text-align: center;}
 
 .headerPrincipal .container {
-  width: 80%;
+  width: 100%;
   height: 100%;
   padding-top: 5px;
   margin: 0 auto;
@@ -172,10 +172,11 @@ nav{width: 100%;  justify-content: center;
 
 
 .menu {
+  margin-left: 10%;
   display: flex;
   flex-direction: column;
   padding: 1px;
-  width: 100%;
+  width: 80%;
   justify-content: center;
   text-align: center;
 
@@ -184,7 +185,7 @@ nav{width: 100%;  justify-content: center;
 
 .menu a {
   font-size: 1.2rem;
-  margin-bottom: 15px;
+  margin-bottom: 12px;
   display: flex;
   width: 100%;
   color: var(--color-body);
@@ -221,7 +222,6 @@ nav{width: 100%;  justify-content: center;
   -webkit-background-clip: unset;
   -webkit-text-fill-color: #ffffff;
   transition: 0.1s ease-out;
-  font-weight: 600;
   text-shadow: 2px 2px 2px rgb(69, 69, 69);
 
 }
