--- a/css/contact.css
+++ b/css/contact.css
@@ -119,7 +119,8 @@ form {
   display: flex;
   font-family: 'Montserrat', sans-serif;
   border: 1px solid rgba(140, 140, 140, 0.801);
-  text-shadow: 1px 1px 2px rgb(69, 69, 69);
+  text-shadow: 1px 2px 2px rgb(69, 69, 69);
+  font-weight: 600;
   margin: 19px 0 0 0;
   padding: 10px;
   width: 90%;
