--- a/css/base.css
+++ b/css/base.css
@@ -121,6 +121,7 @@ html {
 .headerPrincipal {
   display: none;
   background: var(--bg-body-light);
+  opacity: 0.98;
   position: fixed;
   width: 100%;
   height: 100%;
