minor visualization issues fixed

--- a/css/projects.css
+++ b/css/projects.css
@@ -3,8 +3,8 @@
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  padding:10%;
-  min-height: 99vh;
+  padding:10vh;
+  min-height: 79vh;
   color: var(--color-body);
 }
 
@@ -202,9 +202,6 @@
 
 
 @media screen and (min-width: 822px) {
-.projectsContainer{
-  padding:0;
-}
 
 
   .projectsItem {
