--- a/css/base.css
+++ b/css/base.css
@@ -121,7 +121,7 @@ html {
 .headerPrincipal {
   display: none;
   background: var(--bg-body-light);
-  opacity: 0.98;
+  opacity: 0.9998;
   position: fixed;
   width: 100%;
   height: 100%;
@@ -253,7 +253,7 @@ section:nth-child(3) {
 
 section:nth-child(4) {
   background-color: var(--bg-body-light);
-  min-height: 100vh;
+  min-height: 100%;
 }
 
 section:nth-child(5) {
