--- a/css/contact.css
+++ b/css/contact.css
@@ -1,8 +1,8 @@
 .contactContainer {
   flex-direction: column;
   justify-content: space-around;
-  min-height: 99vh;
-  padding: 10%;
+  min-height: 79vh;
+  padding: 10vh;
   color: var(--color-body);
 }
 
@@ -119,7 +119,7 @@ form {
   display: flex;
   font-family: 'Montserrat', sans-serif;
   border: 1px solid rgba(140, 140, 140, 0.801);
-  text-shadow: 1px 2px 2px rgb(69, 69, 69);
+  text-shadow: 1px 2px 2px rgba(69, 69, 69, 0.235);
   font-weight: 600;
   margin: 19px 0 0 0;
   padding: 10px;
