--- a/css/education.css
+++ b/css/education.css
@@ -57,9 +57,8 @@
 @media screen and (min-width: 982px) {
 
   .educationContainer {
-    padding-top: 5%;
-    padding-bottom: 3%;
-    height: calc(100vh-40px);
+    padding:10vh;
+    height:79vh;
     width: 70%;
     text-align: center;
   }
