--- a/css/home.css
+++ b/css/home.css
@@ -29,7 +29,7 @@
     flex-direction: column;
     justify-content: space-around;
     text-align: center;
-    height: 53vh;
+    height: 53%;
     min-height: 320px;
     padding: 12px 6% 12px 6% ;
     background-color: var(--bg-banner);
@@ -41,7 +41,7 @@
     flex-direction: column;
     justify-content: space-around;
     text-align: center;
-    height: 20vh;
+    height: 20%;
     max-height: 158px;
     min-height: 138px;
     border-radius: 15px;
@@ -63,7 +63,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    height: 30vh;
+    height: 30%;
     max-height: 177px;
     min-height: 140px;
     text-align: center;
@@ -142,8 +142,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    height: 100vh;
-      padding: 10%;
+    height: 90vh;
+    padding:5vh
 }
 
 
