--- a/css/home.css
+++ b/css/home.css
@@ -63,9 +63,9 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    height: 30%;
-    max-height: 177px;
-    min-height: 140px;
+    height: 48%;
+    max-height: 187px;
+    min-height: 156px;
     text-align: center;
 
 
@@ -143,7 +143,7 @@
     flex-direction: column;
     justify-content: space-around;
     height: 90vh;
-    padding:5vh
+    padding:5vh 10% 5vh 10%;
 }
 
 
