header issue fixed

--- a/css/base.css
+++ b/css/base.css
@@ -637,6 +637,7 @@ footer .icon-section i:hover {
     text-align: center;
     vertical-align: middle;
     justify-content: space-around;
+    font-size: 1.02rem;
 
   }
 
