--- a/css/projects.css
+++ b/css/projects.css
@@ -15,13 +15,17 @@
 
 
 .projectsContainer h3 {
-  font-size: 18px;
-  font-weight: 600;
+  font-size: 15px;
+  font-weight: 500;
   line-height: 2rem;
-  opacity: 0.75;
 
 }
 
+.projectsItem:hover h3{
+  font-weight: 600;
+  opacity: 0.85;
+
+}
 
 .projects__menu{
   width: 100%;
@@ -250,6 +254,17 @@ line-height: 1.2rem;
 .research-info{
   font-size: 0.8rem;
   margin: 10px 0 25px 0;
+}
+
+#comingSoon{
+  line-height: 1.5rem;
+}
+
+#commingSoonIcon{
+  font-size: 70px;
+  margin: 50px;
+  opacity: 0.65;
+
 }
 
 @media screen and (min-width: 822px) {
